# python-krux-boto-sqs

./: Pipfile  READEME.md  README.md  setup.cfg  setup.py
krux_sqs/: cli.py  sqs.py
test/: sqs_test.py
tests/: sqs_test.py
