[metadata]
description-file = README.md

[aliases]
# Use pytest for testing locally:
test = pytest
# And also for Continuous Integration tests:
citest = test

[coverage:report]
show_missing = True

[flake8]
max-line-length = 120

[tool:pytest]
# Options for pytest
# Adds following CLI options whenever pytest is triggered
addopts =
    --cov krux_sqs
    --flake8
